--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "mynode",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
+    "start": "node ./bin/www.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "leedakoog",
